<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/play_bk"
    android:id="@+id/play_panel_id">
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/cip_anchor"/>
    <ImageView 
        android:src="@drawable/mid_tip_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cip_anchor"
        android:contentDescription="@string/desc"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:id="@+id/mid_tip_bg_id"/>
    <ImageView 
        android:id="@+id/mid_tip_icon_id"
        android:src="@drawable/mid_tip_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mid_tip_bg_id"
        android:layout_alignLeft="@+id/mid_tip_bg_id"
        android:contentDescription="@string/desc"
        android:layout_marginLeft="-5dp"/>
    <TextView 
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mid_tip_text"
        android:layout_alignLeft="@+id/mid_tip_bg_id"
        android:layout_alignBottom="@+id/mid_tip_bg_id"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="4dp"/>
    <TextView 
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mid_tip_icon_text"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/mid_tip_icon_id"
        android:layout_toRightOf="@+id/mid_tip_icon_id"
        android:textColor="@android:color/white"
        android:layout_marginBottom="-2dp"/>
    <TextView 
        android:id="@+id/dishu_value_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/dishu_value"
        android:textColor="#ffff00"
        android:textSize="12sp"/>
    <TextView 
        android:id="@+id/dishu_value_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/dishu_value_id"
        android:layout_alignBottom="@+id/dishu_value_id"
        android:text="@string/dishu_value_text"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginRight="10dp"/>
    <TextView 
        android:id="@+id/beishu_value_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dishu_value_id"
        android:layout_marginTop="3dp"
        android:text="@string/bieshu_value"
        android:textColor="#ffff00"
        android:textSize="12sp"
        android:layout_alignRight="@+id/dishu_value_id"/>
    <TextView 
        android:id="@+id/bieshu_value_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/beishu_value_id"
        android:layout_alignBottom="@+id/beishu_value_id"
        android:text="@string/bieshu_value_text"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginRight="10dp"/>
    <ImageView 
        android:id="@+id/store_coin_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@drawable/store_coin"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/desc"
        android:src="@drawable/store_coin"
        android:layout_toRightOf="@+id/cip_anchor"
        android:layout_marginLeft="30dp"/>
</RelativeLayout>
